--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "mainstay_connect"
 version = "1.1.0"
 authors = [
     {name = "Isaac Kerson", email = "ikerson@gsu.edu"},
+    {name = "Christopher Carbonaro", email = "ccarbonaro@gsu.edu"},
 ]
 description = "A Mainstay API connection handler"
 readme = "README.md"
