--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mainstay_connect"
-version = "1.1.0"
+version = "1.2.0"
 authors = [
     {name = "Isaac Kerson", email = "ikerson@gsu.edu"},
     {name = "Christopher Carbonaro", email = "ccarbonaro@gsu.edu"},
@@ -27,6 +27,9 @@ dependencies = [
 [project.urls]
 "Homepage" = "https://github.com/GSU-Analytics/mainstay_connect"
 "Bug Tracker" = "https://github.com/GSU-Analytics/mainstay_connect/issues"
+
+[project.scripts]
+mainstay-fetch = "mainstay_connect.fetch_CLI:fetch_cli"
 
 [project.optional-dependencies]
 test = ["pytest"]
